# tidbcloud-skills

./: .gitignore  LICENSE  README.md  pyproject.toml
skills/tidb-zero/: .env.example  SKILL.md
skills/tidb-zero/configs/: openapi.json  sut.yaml
skills/tidb-zero/scripts/: tidb0_openapi_extract.sh  tidb0_openapi_list.sh
skills/tidbcloud-manager/: .env.example  SKILL.md
skills/tidbcloud-manager/configs/tidbcloud_serverless/: openapi.json  sut.yaml
skills/tidbcloud-manager/configs/tidbx/: openapi.json  sut.yaml
skills/tidbcloud-manager/references/: credentials.md  knowledge-schema.md  workflow.md  yaml-format.md
src/tidbcloud_manager/: cli.py  knowledge_export.py  openapi_tools.py  runtime.py  secure_executor.py  session_manager.py
